# log_python

./: README.md  exemplo_00.py  logging_exemplo.py  pyproject.toml
